Fix z-index issues with dialogs and pop menus rendering ...
... underneath dev panel

--- a/core/components/dynamic-screen/dev-menu.component.scss
+++ b/core/components/dynamic-screen/dev-menu.component.scss
@@ -12,6 +12,10 @@
     width:100%;
 }
 
+::ng-deep .mat-menu-content {
+    background-color: white;
+}
+
 .devButton {
     position: relative;
     cursor: pointer;
